--- a/MasterCard/MasterCard.SharePoint.csproj
+++ b/MasterCard/MasterCard.SharePoint.csproj
@@ -89,8 +89,10 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="PageModule\ApplicationHubPage.aspx" />
-    <Content Include="PageModule\Elements.xml" />
     <Content Include="PageModule\ApplicationHubPageLayout.aspx" />
+    <Content Include="PageModule\Elements.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" />
